--- a/src/options.html
+++ b/src/options.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <script language="javascript" src="scripts/options.js"></script>
   <title>Document</title>
 </head>
 <body>
   <input type="text" name="token" id="token" placeholder="token" />
+  <label class="switch">
+  	<input type="checkbox" id="switch" name="switch">
+  	<div class="slider round"></div>
+  </label>
 </body>
 
 </html>
