--- a/src/options.html
+++ b/src/options.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
+  <input type="text" name="host" id="host" placeholder="host" />
   <input type="text" name="token" id="token" placeholder="token" />
   <label class="switch">
   	<input type="checkbox" id="switch" name="switch">
