Bad CSS style: done

--- a/src/options.html
+++ b/src/options.html
@@ -7,10 +7,14 @@
   <title>Document</title>
 </head>
 <body>
-  <label class="switch">
-  	<input type="checkbox" id="switch" name="switch">
-  	<div class="slider round"></div>
-  </label>
+
+  <div>
+    <label for="switch">Enable Hull Preview</label>
+    <label class="switch">
+  	  <input type="checkbox" id="switch" name="switch">
+  	  <div class="slider round"></div>
+    </label>
+  </div>
   <input type="text" name="host" id="host" placeholder="host" />
   <input type="text" name="token" id="token" placeholder="token" />
 </body>
