--- a/src/options.html
+++ b/src/options.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script language="javascript" src="scripts/options.js"></script>
   <title>Document</title>
 </head>
 <body>
@@ -15,8 +14,17 @@
   	  <div class="slider round"></div>
     </label>
   </div>
+
+  <label for="host">Hostname:</label>
   <input type="text" name="host" id="host" placeholder="host" />
+
+  <label for="host">Token:</label>
   <input type="text" name="token" id="token" placeholder="token" />
+
+  <script language="javascript" src="scripts/options.js"></script>
+  <script language="javascript" src="scripts/get-switch.js"></script>
+  <script language="javascript" src="scripts/get-connector-url.js"></script>
+  <script language="javascript" src="scripts/get-token.js"></script>
 </body>
 
 </html>
