Simplify the flow

--- a/src/options.html
+++ b/src/options.html
@@ -6,19 +6,10 @@
   <title>Document</title>
 </head>
 <body>
-
-  <div>
-    <label for="switch">Enable Hull Preview</label>
-    <label class="switch">
-  	  <input type="checkbox" id="switch" name="switch">
-  	  <div class="slider round"></div>
-    </label>
-  </div>
-
   <label for="host">Hostname:</label>
   <input type="text" name="host" id="host" placeholder="host" />
 
-  <label for="host">Token:</label>
+  <label for="host">Email Token:</label>
   <input type="text" name="token" id="token" placeholder="token" />
 
   <script language="javascript" src="scripts/options.js"></script>
