Improve default ident detecting

--- a/src/options.html
+++ b/src/options.html
@@ -6,11 +6,8 @@
   <title>Document</title>
 </head>
 <body>
-  <label for="host">Hostname:</label>
-  <input type="text" name="host" id="host" placeholder="host" />
-
-  <label for="host">Email Token:</label>
-  <input type="text" name="token" id="token" placeholder="token" />
+  <label for="url">Connection URL:</label>
+  <input type="text" name="url" id="url" placeholder="url" />
 
   <script language="javascript" src="scripts/options.js"></script>
   <script language="javascript" src="scripts/get-switch.js"></script>
